--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,8 +81,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses on the use of Deep learning to solve the real problems of Robotics applications. 
-                My current work centers on enabling robots to construct high-precision multimodal semantic maps efficiently. I believe this will establish a strong foundational framework for visual-language navigation tasks.
+                I have broad interests in foundational methods and applications in robotics and 3D vision. Specifically, my current research focuses on <strong>Field Robotics</strong> and <strong>Space Robotics</strong>.
+                Feel free to reach out to discuss ideas or collaborations~ 
               </p>
               <p>
                 As an active contributor to the robotics and 3D vision communities, I maintain several popular curated repositories (awesome lists and paper collections):
