--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,6 +137,9 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                [Dec 2025]&nbsp;&nbsp; GauSem-SLAM has been accepted by <a href="https://2026.ieee-icra.org/">ICRA 2026</a>. See you in Vienna!.
+              </p>
+              <p>
                 [Dec 2025]&nbsp;&nbsp; Our survey on 3D Scene Representation is available on <a href="https://arxiv.org/pdf/2512.03422">arXiv</a>, and Chinese introduction available for <a href="https://mp.weixin.qq.com/s/vBNr9hGz9mEH9cprGLm_GQ">机器之心</a>.
               </p>
               <p>
