--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -479,6 +479,7 @@
         <li><i>IEEE Robotics and Automation Letters (RAL)</i> * 1</li>
         <li><i>IEEE Robotics and Automation Practice (RA-P)</i> * 1</li>
         <li><i>Neurocomputing</i> * 1</li>
+        <li><i>IEEE Sensors Journal</i> * 1</li>
         <li><i>Scientific Reports</i> * 1</li>
       </ul>
     </td>
